<resources>
    <string name="app_name">易往信息</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account">请输入帐号</string>
    <string name="password">请输入密码</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_main">MVP Example</string>
    <string name="username_error">账号不能为空</string>
    <string name="password_error">密码不能为空</string>
    <string name="login">登  陆</string>

    <string name="home_image_view_text">首页</string>
    <string name="message_image_view_text">消息</string>
    <string name="mine_image_view_text">我的</string>
    <string name="children">二级菜单</string>

    <string name="set_read">设置已读</string>
    <string name="system_notification">系统通知</string>
    <string name="message_notification">消息通知</string>
    <string name="notification_details">通知详情</string>
    <string name="update_info">版本更新</string>
    <string name="log_out">退出登录</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="update_password">修改密码</string>
    <string name="ok_update">确认修改</string>
    <string name="new_password">请输入新密码</string>
    <string name="old_password">原密码:</string>
    <string name="confirm_password">请确认新密码</string>
    <string name="network">网络问题</string>
    <string name="update_content">1.修复BUG\n2.优化界面\n3.向天空大声的呼喊说声妈卖批\n4.欢迎大家Star和提issue</string>
    <!-- QR_Code -->
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the
        device.
    </string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">放入框中即可进行二维码扫描</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
    <string name="preferences_remember_duplicates_title">Remember duplicates</string>
    <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
    <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
    <string name="preferences_supplemental_title">Retrieve more info</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preview_msg">&#160;preview pages available,click Download for more.</string>


    <string name="update_download_failed_msg">update_download_failed_msg</string>
    <string name="update_download_start">update_download_start</string>
    <string name="update_download_start_msg">update_download_start_msg</string>
    <string name="update_download_processing">update_download_processing</string>
    <string name="update_download_finish">update_download_finish</string>
    <string name="update_download_failed">update_download_failed</string>
</resources>
