<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include
        android:id="@+id/main_title"
        layout="@layout/common_title" />

    <com.ewininfo.mes.widget.ClearEditText
        android:id="@+id/tv_new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="15dp"
        android:gravity="left|center"
        android:layout_marginRight="15dp"
        android:hint="@string/new_password"
        android:background="@null"
        android:lines="1"
        android:textColor="@color/color_d2d2d2"
        android:textColorHint="@color/color_d2d2d2"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:background="@color/color_cdcdcd"
        />
    <com.ewininfo.mes.widget.ClearEditText
        android:id="@+id/tv_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login_input_number"
        android:paddingLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/confirm_password"
        android:background="@null"
        android:inputType="textPassword"
        android:lines="1"
        android:textColor="@color/color_d2d2d2"
        android:textColorHint="@color/color_d2d2d2"
        android:textSize="16sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cdcdcd"
        />
    <Button
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rl_login_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:enabled="false"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:background="@color/color_dcdcdc"
        android:gravity="center"
        android:text="@string/ok_update"
        android:textSize="@dimen/text_18" />
</LinearLayout>
