<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:background="@color/color_ff7231">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mine_image_view_text"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/logined_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="15dp"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_photo_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@drawable/default_user_avatar"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/user_photo_view"
            android:layout_centerVertical="true"
            >
            <TextView
                android:id="@+id/username_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="tyt114"
                android:textColor="@color/color_333333"
                android:textSize="16sp"
                />
            <TextView
                android:id="@+id/tick_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_view"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:text="tyt114"
                android:textColor="@color/color_cdcdcd"
                android:textSize="13sp"
                />
        </RelativeLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_update_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/right"
        android:drawablePadding="5dp"

        android:drawableRight="@drawable/right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/update_password"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/right"
        android:drawablePadding="5dp"

        android:drawableRight="@drawable/right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/update_info"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/right"
        android:drawablePadding="5dp"

        android:drawableRight="@drawable/right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/update_info"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/right"
        android:drawablePadding="5dp"

        android:drawableRight="@drawable/right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/update_info"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/right"
        android:drawablePadding="5dp"
        android:id="@+id/user"
        android:drawableRight="@drawable/right"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/update_info"
        android:textColor="@color/color_333333"
        android:textSize="15sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:background="@color/color_cdcdcd"
        />
    <Button
        android:id="@+id/bt_log_out"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/rl_login_input"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:background="@color/color_ff7231"
        android:gravity="center"
        android:text="@string/log_out"
        android:textSize="@dimen/text_18" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_cdcdcd"
        />
</LinearLayout>
