<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
       >

        <RelativeLayout
            android:id="@+id/home_layout_view"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/home_image_view_text"
                android:id="@+id/tv_home"
                android:textColor="@color/color_ff7231"
                android:textSize="10sp"
                android:layout_marginBottom="3dp"
                />

            <TextView
                android:id="@+id/home_image_view"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@drawable/comui_tab_home_selected"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/message_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



                <TextView
                    android:id="@+id/message_image_view"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:background="@drawable/comui_tab_message" />
                <TextView
                    android:id="@+id/nav_tv_dot"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginLeft="7dp"
                    android:layout_gravity="top|center"
                    android:background="@drawable/ic_red_dot"
                    android:layout_marginTop="3dp"
                    android:ellipsize="none"
                    android:gravity="center"
                    android:lines="1"
                    android:minWidth="14dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:textColor="@color/white"
                    android:textSize="7sp"
                    android:visibility="gone"
                    tools:text="1"
                    tools:visibility="visible" />

            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/message_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:id="@+id/tv_message"
                android:text="@string/message_image_view_text"
                android:textColor="@color/color_333333"
                android:textSize="10sp"
                />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/mine_layout_view"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mine_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:text="@string/mine_image_view_text"
                android:id="@+id/tv_mine"
                android:textColor="@color/color_333333"
                android:layout_marginBottom="3dp"
                android:textSize="10sp"
                />

            <TextView
                android:id="@+id/mine_image_view"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:background="@drawable/comui_tab_person"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/linearLayout"
        android:background="@color/color_333333"
        />
</RelativeLayout>
