<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f4f3f9"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:background="@color/color_ff7231">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/message_image_view_text"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notification_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:padding="15dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fl_notification">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/comui_tab_message_selected" />
            <TextView
                android:id="@+id/tv_notification_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_red_dot"
                android:ellipsize="none"
                android:gravity="center"
                android:lines="1"
                android:minWidth="14dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                 />

        </FrameLayout>



        <TextView
            android:id="@+id/text_notification_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/fl_notification"
            android:gravity="left|center"
            android:text="@string/system_notification"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/right" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:background="@color/color_cdcdcd" />

    <RelativeLayout
        android:id="@+id/message_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:padding="15dp">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fl_message">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/comui_tab_message_selected" />
            <TextView
                android:id="@+id/tv_message_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_red_dot"
                android:ellipsize="none"
                android:gravity="center"
                android:lines="1"
                android:minWidth="14dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:textColor="@color/white"
                android:textSize="10sp"
                />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_message_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/fl_message"
            android:gravity="left|center"
            android:text="@string/message_notification"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"
                android:src="@drawable/right" />
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:background="@color/color_cdcdcd" />

</LinearLayout>
